[project]
name = "pyportsscanner"
version = "0.1.0"
description = "simple port scanner implemented in Python using the `socket` library and the `rich` library for enhanced output. It allows you to check if specific ports are open on a given host."
authors = [
    {name = "Yoru-cyber",email = "carlosmendez170210@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich (>=13.9.4,<14.0.0)"
]

[tool.poetry]
packages = [{include = "pyportsscanner", from = "src"}]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
